--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ li {
   position: relative;
   top: -30px;
   left: -18px;
-  
+
   text-decoration: none;
 }
 
@@ -134,24 +134,49 @@ h1 {
 
 .link {
   text-align: center;
-  position: relative;
-  top: 0px;
-  right:-160px
+  
+  
 }
 
 .weather-forecast {
-text-align: center;
+  text-align: center;
+font-size: 12px;
 
-font-size: 15px;
 }
 .container {
-  
-color: rgb(147, 74, 215);
+  color: rgb(147, 74, 215);
 }
 
-.max-temp-forecast{
-  color: rgb(38, 38, 38);
+#forecast {
+  font-size: 15px;
+  display: inline-flex;
+  justify-content: space-between;
 }
-.min-temp-forecast{
-  color: #858585;
+.weather-forecast-temp-min {
+  opacity: 0.5;
+  color: #626262;
+  position: relative;
+  top: 1px;
+  right: -22px;
+}
+.weather-forecast-temp-max {
+  color: #181818;
+}
+.forecast-date {
+   position: relative;
+  top: 1000px;
+  right: -20px;
+  font-weight: bold;
+  color: black;
+  
+}
+.weather-forecast-temperatures{
+  font-size: 12px;
+}
+
+.weather-forecast-date{
+  font-size: 12px;
+  position: relative;
+  top: 10px;
+  right: -10px;
 }
